[project]
name = "xenoviewer"
version = "0.1.0"
description = "A base class for building interactive 3D viewers with OpenCV"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["xenoviewer"]
package-dir = {"xenoviewer" = "."}
