[project]
name = "holoviewer"
version = "0.1.0"
description = "A base class for building interactive 3D viewers with OpenCV"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "opencv-python",
    "websockets>=12.0",
    "aiortc>=1.6",
    "av>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
sample = [
    "pyvista",
]
stream = [
    "websockets>=12.0",
    "aiortc>=1.6",
    "av>=10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["holoviewer"]
package-dir = {"holoviewer" = "."}
